infra/tiers/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: nexus-staging
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /__healthcheck
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}' 
  name: frontend-ingress
spec:
  rules:
  - host: staging.nexushealthproject.com
    http:
      paths:
      - path: /*
        backend:
          service:
            name: ssl-redirect
            port: 
              name: use-annotation
        pathType: ImplementationSpecific
      - backend:
          service:
            name: frontend
            port:
              number: 5000
        path: /*
        pathType: ImplementationSpecific
